removing mix-blend-mode on card cover for paint fix on mobile

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -255,8 +255,7 @@ h1 {
       right: 0;
       bottom: 0;
       left: 0;
-      background-color: rgba(95, 50, 153, 0.5);
-      mix-blend-mode: difference; }
+      background-color: rgba(95, 50, 153, 0.5); }
   .card__content {
     margin-top: 5px;
     text-align: left;
