--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -79,7 +79,7 @@
         bottom:0;
         left:0;
         background-color: rgba(95, 50, 153, 0.5);
-        mix-blend-mode: difference;
+        //mix-blend-mode: difference;
       }
   }
   @at-root &__content {
